Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71741

[macOS] QTabWidget is incorrectly drawn in 5.12 in Mojave

XMLWordPrintable

    • macOS
    • 8915904e2a56d46bdedf64f9a7a5e331ae9d00e1 (qt/qtbase/5.12)
    • Bug Fixing Week Q2/2020

      • in light mode: the top frame line is not correctly vertically centered against buttons
      • in dark mode: the line is weirdly drawn throughout tab buttons

      The screenshot is taken from the preferences dialog of Qt Designer (compiled with 5.12). Other screenshots attached as well.

        1. 5.12RC_line_not_vcentered.png
          5.12RC_line_not_vcentered.png
          20 kB
        2. correcttabactive.png
          correcttabactive.png
          18 kB
        3. correcttabinactive.png
          correcttabinactive.png
          18 kB
        4. QTabWidget_5.12b4.jpg
          QTabWidget_5.12b4.jpg
          14 kB
        5. QTabWidget_5.6.3.jpg
          QTabWidget_5.6.3.jpg
          14 kB
        6. screen_regression_commit.png
          screen_regression_commit.png
          163 kB
        7. Screenshot 2018-11-12 at 21.24.20.png
          Screenshot 2018-11-12 at 21.24.20.png
          17 kB
        8. Screenshot 2019-01-04 13.55.58.png
          Screenshot 2019-01-04 13.55.58.png
          27 kB
        9. wrongtabinactive.png
          wrongtabinactive.png
          26 kB
        For Gerrit Dashboard: QTBUG-71741
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            crystalidea Steven (crystalidea)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes